--- a/src/GUI/InterfaceWhatsApp.form
+++ b/src/GUI/InterfaceWhatsApp.form
@@ -278,7 +278,7 @@
         <Component class="javax.swing.JTextField" name="txt_mensagem">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="54" green="b9" red="1d" type="rgb"/>
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="digite aqui..."/>
           </Properties>
@@ -362,7 +362,7 @@
         <Component class="javax.swing.JTextField" name="txt_pesquisarContatos1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="54" green="b9" red="1d" type="rgb"/>
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="pesquisar"/>
           </Properties>
