--- a/src/GUI/InterfaceWhatsApp.form
+++ b/src/GUI/InterfaceWhatsApp.form
@@ -416,7 +416,7 @@
                     <Property name="tabSize" type="int" value="1"/>
                     <Property name="autoscrolls" type="boolean" value="false"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                      <Color id="Cursor Padr&#xe3;o"/>
+                      <Color id="Default Cursor"/>
                     </Property>
                   </Properties>
                 </Component>
